[package]
name = "xiss-map"
version = "0.0.1"
description = "xiss Map Loader"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true

[dependencies]
rustc-hash.workspace = true
smol_str.workspace = true
