[package]
name = "xiss"
version = "0.0.1"
description = "CSS Modules Compiler"
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true
include.workspace = true
readme.workspace = true

[dependencies]
xiss-map = { path = "../xiss-map", version = "0.0.1" }
rustc-hash.workspace = true
regex.workspace = true
thiserror.workspace = true
smol_str.workspace = true
phf = { version = "0.11", features = ["macros"] }
crossbeam = "0.8"
parking_lot = "0.12"
clap = { version = "4", features = ["derive"] }
owo-colors = "3"
color-eyre = { version = "0.6", default-features = false }
ctrlc = { version = "3", features = ["termination"] }
walkdir = "2"
notify-debouncer-mini = { version = "0.2.1", features = [] }
serde = { version = "1", features = ["derive", "std"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
swc_css = "0.152"
swc_common = "0.30"
swc_atoms = "0.4"
swc_error_reporters = "0.14"
